--- a/style.css
+++ b/style.css
@@ -171,7 +171,7 @@ header {
     display: flex;
     justify-content: space-between;
     flex-direction: row;
-    gap: 40px;
+    gap: 80px;
 }
 
 /* titulo sobre mi */
@@ -187,7 +187,7 @@ header {
 .caja-presentacion img {
     max-width: 100px;
     animation: pulse 1s infinite alternate;
-    margin-top: 20px;
+    margin-top: 30px;
 }
 
 
@@ -258,6 +258,9 @@ header {
 #mis-proyectos {
     height: 100vh;
     color: #B34F93;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 .catalogo1 {
     display: flex;
