--- a/style.css
+++ b/style.css
@@ -2,37 +2,45 @@
 
 /* CSS Document */
 /*pantalla utilizada tamaño 1920 x 1080*/
+
+
+@import url("https://use.typekit.net/mqf8qze.css");
+
 * {
     margin: 0px;
     padding: 0px;
     text-decoration: none;
     list-style: none;
-    font-family: "elza", sans-serif;
-    font-weight: 400;
+    font-family: "elza",sans-serif;
 }
 
-@import url(<link rel="stylesheet" href="https://use.typekit.net/wqz7tsk.css">);
 
-body {
-    cursor: url (img/cursor.png)
-}
 
 header {
     background-color: #D78FC6;
     /* fondo header*/
 }
 
-#botones {
+#botonera {
     display: flex;
-    justify-content: space-around;
-    padding-top: 20px;
+    justify-content: space-between;
 }
 
-#botones a {
-    margin: 20px;
-    padding: 15px 20px;
-    /* Espacio interno del botón */
+.logo {
     display: flex;
+    align-items: center;
+    margin-left: 20px;
+}
+
+.botones {
+    display: flex;
+}
+
+.botones a {
+    margin: 20px;
+    padding: 20px 20px;
+    /* Espacio interno del botón */
+    font-family: "elza", sans-serif;
     font-size: 20px;
     /* Tamaño del texto */
     color: #B34F93;
@@ -44,9 +52,9 @@ header {
     box-shadow: 0px 8px 10px rgba(0, 0, 0, 0.1);
 }
 
-#botones a:hover {
+.botones a:hover {
     margin: 20px;
-    padding: 15px 20px;
+    padding: 20px 20px;
     /* Espacio interno del botón */
     font-size: 20px;
     /* Tamaño del texto */
@@ -127,27 +135,41 @@ header {
 }
 
 /*COMIENZO DE SECCION 1 */
-
 .inicio {
     height: 100vh;
-    background-color: #D78FC6;
+    background-color: #B34F93;
+}
+.saludo {
+    display: flex;
+    justify-content: space-between;
+    padding: 0px 82px 0px 66px;
 }
 
-.inicio h1 {
+
+
+.saludo h1 {
+    font-family:"neulis-cursive", sans-serif;
     font-weight: 700;
     color: #F1D9ED;
-    font-size: 128px;
+    font-size: 110px;
     display: flex;
     margin-top: 30px;
-    justify-content: center;
-    /* nombre al centro*/
     letter-spacing: 4px;
     /*espaciado de letras*/
-    transition: transform 0.5s ease-in-out;
 }
 
-.inicio h1:hover {
-    transform: scale(1.2);
+.saludo2 {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+
+.saludo h2 {
+    font-family:"neulis-cursive", sans-serif;
+    font-weight: 400;
+    font-size: 60px;
+    color: #F1D9ED;
+    margin-top: 30px;
 }
 
 /*COMIENZO SECCION 2- DATOS*/
@@ -159,6 +181,7 @@ header {
 
 /*cajas*/
 #sobre-mi {
+    
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -364,4 +387,53 @@ align-items: flex-end;
 
 .redes img {
     margin-top: 5px;
+}
+
+/*FORMULARIO DE CONTACTO*/
+form {
+    width: 100%;
+    height: auto;
+    display: flex;
+}
+
+input {
+    background-color: #D78FC6;
+    width: 100%;
+    height: 30px;
+    margin-bottom: 25px;
+
+}
+label {
+    display: block;
+    height: 25px;
+}
+
+.info, .info2 {
+    width: 20%;
+    height: auto;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    border-radius: 40px;
+}
+input [type="submit"] , input [type="reset"] {
+    height: 30px;
+    width: 30%;
+    background-color:#D78FC6 ;
+    display: flex;
+    color: #F7ECF5;
+    padding: 5px;
+}
+.borrar {
+    background-color: #D78FC6;
+}
+.enviar {
+        background-color: #B34F93;
+    }
+
+textarea {
+    background-color: #D78FC6;
+    width: 100%;
+    height: 200px;
+    border-radius: 40px;
 }
