--- a/style.css
+++ b/style.css
@@ -282,16 +282,6 @@ h2 {
     position: relative;
 
 }
-/*.brillo2-0,
-{
-position: absolut;
-width: 57.998px;
-height: 62.045px;
-}
-
-.brillo-2 {
-position: relative;
-}*/
 
 
 /*FOOTER*/
@@ -487,17 +477,7 @@ h3 {
 
 
 
-
-
-
-
-
 /*MIS PROYECTOS*/
-
-
-
-
-
 
 /*DETALLES DE MIS PROYECTOS*/
 
@@ -534,11 +514,14 @@ h3 {
 }
 
 
+/*pruab form*/
 
 
 
+.prueba1 {
+    background-color: black;
 
-
+}
 
 
 
@@ -550,29 +533,43 @@ body {
 
 .contenedor-formulario {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     column-gap: 60px;
-    max-width: 100%;
+    width: 100%;
     color: #B34F93;
     align-items: flex-end;
+    height: auto;
 
 
 }
 
-.texto-lectura {
+.formulario {
     font-size: 48px;
     font-weight: 700;
-    max-width: 40%;
-    padding: 20px 50px 100px;
     font-family: "neulis-cursive", sans-serif;
-    font-size: 70px;
+    font-size: 50px;
     margin-top: 30px;
-}
-
-.aviso {
     display: flex;
-
+    width: 100%;
 }
+
+
+
+/*texto*/
+.formulario h2 {
+    max-width: 550px;
+    font-family: Elza;
+    font-size: 50px;
+    font-weight: 600;
+    line-height: 70px;
+    padding-left: 57px; 
+}
+.info p {
+font-size: 22px;
+font-weight: 700;
+margin-bottom: 30px;
+}
+
 
 .aviso h1 {
     font-size: 90px;
@@ -582,11 +579,22 @@ body {
     display: flex;
 }
 
-form {
-    width: 100%;
-    height: 60;
+
+.formulario {
+
+}
+
+.aviso {
     display: flex;
-    flex-direction: row;
+    width: 100%;
+    justify-content: space-evenly;
+
+}
+
+
+
+form {
+    display: flex;
     justify-content: space-between;
 }
 
@@ -597,7 +605,18 @@ input {
     margin-bottom: 25px;
     border-radius: 25px;
     border: 3px solid #B34F93;
+    padding-left: 20px;
+    font-size: 20px;
+}
 
+input [type="submit"],
+input [type="reset"] {
+    height: 30px;
+    width: 30%;
+    background-color: #F7ECF5;
+    display: flex;
+    color: #F7ECF5;
+    padding: 5px;
 }
 
 label {
@@ -605,34 +624,36 @@ label {
     height: 25px;
 }
 
-.info,
+
+.campos {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    width: 100%;
+}
+
+.info {
+    height: auto;
+    width: 470px;
+    padding: 20px;
+    border-radius: 40px;
+    font-size: 25px;
+
+}
+
 .info2 {
     width: 40%;
     height: auto;
     padding: 20px;
-    display: flex;
-    flex-direction: column;
     border-radius: 40px;
     font-size: 25px;
     font-weight: 600;
 }
 
-.info2 {
-    display: flex;
-}
 
-input [type="submit"],
-input [type="reset"] {
-    height: 30px;
-    width: 30%;
-    background-color: #D78FC6;
-    display: flex;
-    color: #F7ECF5;
-    padding: 5px;
-}
 
 .borrar {
-    background-color: #D78FC6;
+    background-color: #F7ECF5;
 }
 
 .enviar {
@@ -640,7 +661,7 @@ input [type="reset"] {
 }
 
 textarea {
-    background-color: #D78FC6;
+    background-color: #F7ECF5;
     width: 100%;
     height: 200px;
     margin-bottom: 20px;
@@ -657,6 +678,10 @@ textarea {
     height: 100vh;
     background-color: #F7ECF5;
 
+}
+.carousel-container h4 {
+    font-size: 25px;
+    color: #251520;
 }
 
 .inicio-carousel {
