--- a/style.css
+++ b/style.css
@@ -15,6 +15,9 @@
 
 }
 
+/*body, html {
+    overflow-x: hidden;
+}*/
 /* INDEX.HTML*/
 
 
@@ -287,9 +290,10 @@ h2 {
 /*FOOTER*/
 
 /*redes fijas*/
+
 .redes {
     position: fixed;
-    top: 23%;
+    top: 24%;
     right: 0;
     transform: translateY(-50%);
     background-color: #B34F93;
@@ -357,7 +361,7 @@ color: #B34F93;
 }
 
 
-/*SOBRE MI*/
+/*HTML SOBRE MI*/
 /*pantalla completa*/
 h4 {
     color: #B34F93;
@@ -406,8 +410,9 @@ h4 {
 
 /*Section intereses*/
 .intereses {
-    height: 100vh;
-    padding: 95px 10px 95px 64px;
+    width: 50%;
+    padding: 95px 10px 95px 0x;
+
 
 }
 
@@ -437,20 +442,43 @@ h4 {
     margin-top: 90px;
 }
 
-/*Section info personal, idiomas etc*/
+/*SECTION INFORMACION PERSONAL */
 .informacion-personal {
-    height: 100vh;
-    display: flex;
+    display: grid;
+    background-color: #1d5aa0;
+    grid-gap: 20px;
+    grid-template-columns: repeat(4, 1fr);   /* Por defecto, cuatro columnas */
+}
+
+/*respoSIVE AJUSTAR*/
+@media (max-width: 1200px) {
+    .informacion-personal {
+        grid-template-columns: repeat(2, 1fr); /* Dos columnas en pantallas medianas */
+    }
+}
+
+@media (max-width: 768px) {
+    .informacion-personal {
+        grid-template-columns: 1fr; /* Una columna en pantallas pequeñas */
+    }
+}
+
+.grid-item {
+    background-color: #ff80f9;
+    width: 100%;
+    height: 300px;
 }
 
 /*todos los h3*/
 h3 {
-    font-size: 40px;
+    font-size: 30px;
     font-family: "neulis-cursive", sans-serif;
 
 }
-
-
+.div.grid-item.a {
+    display: flex;
+    align-items: flex-end;
+}
 
 
 .informacion-personal h3 {
@@ -464,50 +492,71 @@ h3 {
     margin-top: 10px;
 }
 
-#datos li {
-    font-size: 20px;
-    max-width: 650px;
-    margin-right: 10px;
+
+.info-lista2 {
+    gap: 20px;
 }
 
-.info-lista {
+
+.info-lista2 {
     display: flex;
-    co
 }
-
-
 
 /*MIS PROYECTOS*/
 
 /*DETALLES DE MIS PROYECTOS*/
 
-
+.detalle-galeria {
+    display: flex;
+    background-color: #B34F93;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+}
 .boton-atras {
     background-color: none;
 }
 
-.detalle-galeria {
-    display: flex;
-}
 
 .detalle-titulo h2 {
-    color: #B34F93;
+    color: #F7ECF5;
     font-weight: 300;
 }
 
 .detalle-titulo h3 {
-    color: #B34F93;
+    color: #F7ECF5;
 
 }
 
-.detalle-img {
-    border-radius: 78, 0, 0, 0;
-    color: #B34F93;
-}
+/*.contenedor {
+    border-radius: 78.895px 0px 0px 0px;
+    background: var(--Rosi-clarito, #F7ECF5);
+    flex: 1 0 0;
+    radius: 75px 0px 0px 0px;
+    border-radius: 75px 0px 0px 0px;
+    border: 5px solid #1a1281;
+}*/
+
+.contenedor {
+    width: 806px; /* Ajusta el tamaño según lo necesites */
+    height: 1045;
+    background-color: #F7ECF5; /* Color de fondo */
+    padding: 10px; /* Espacio para el borde */
+    border-radius: 50px 0 0 0; /* Redondeado del borde */
+    overflow: hidden; /* Asegura que la imagen se recorte en los bordes redondeados */
+  }
+  .contenedor img {
+    width: 100%;
+    height: auto;
+    border-radius: 50px 0 0 0;/* Redondeado de la imagen */
+  }
+
+
+
 
 .detalle-titulo p {
     max-width: 650px;
-    color: var(--Color-morado, #7F3565);
+    color: var(--Color-morado, #F7ECF5);
     font-size: 30px;
     font-weight: 400;
     line-height: 40px;
